--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^1.0.6",
-    
+    "@material-tailwind/react": "^2.1.9",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    
+   
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5"
